# StateMachine

./: CMakeLists.txt
include/: centrifuge_test.hpp  motor.hpp  self_test.hpp  state_machine.hpp
src/: centrifuge_test.cpp  centrifuge_test_main.cpp  main.cpp  motor.cpp  motor_main.cpp  self_test.cpp  state_machine.cpp
